<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/swipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewCommentsActivity">







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="#1566e0"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hi, Sagar"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/boy"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/tvFutsal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Here are the listed reviews about Nagarjun Futsal."
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>




        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/recycler"/>



    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1566e0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Add your comment"
            android:layout_margin="10dp"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:background="#39FFFFFF"
            android:layout_weight="1"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/tvSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Send"
            android:layout_weight="0.2"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_gravity="center"/>



    </LinearLayout>

</LinearLayout>

