<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="comment"
            type="com.sagarmishra.futsal.entityapi.Futsal" />
    </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@color/white"
    android:elevation="10dp"
    android:layout_height="240dp">
    
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/image"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tvFutsal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{comment.futsalName}"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCommentsCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@{comment.totalComments+ ` comments`}"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/ivPopUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_dots"
            app:tint="@color/black"
            />

    </LinearLayout>



</LinearLayout>
</layout>