<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context=".fragments.booking_screens.BookingFormFragment">

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="6dp"
       app:cardElevation="10dp"
       app:cardCornerRadius="5dp"
       android:background="@color/white"
       android:layout_marginBottom="0dp"

       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/ivFutsal"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_gravity="center"
               android:src="@drawable/fotbol"
               android:layout_marginTop="5dp"/>

           <TextView
               android:id="@+id/tvFutsalName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="Nagarjun Futsal"
               android:textStyle="bold"
               android:textColor="#0E9EAE"
               android:textSize="22sp"
               android:layout_marginTop="3dp"
               />


           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="#FAF8F8"
               android:elevation="4dp"
               android:layout_marginTop="10dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="3dp"
               android:orientation="horizontal">


               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_weight="1">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Date"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="17sp"
                       android:layout_gravity="center"/>

                   <TextView
                       android:id="@+id/tvDate"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="21 Mar,2020"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:layout_gravity="center"/>

               </LinearLayout>


               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_weight="1">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Day"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="17sp"
                       android:layout_gravity="center"/>

                   <TextView
                       android:id="@+id/tvDay"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Sunday"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:layout_gravity="center"/>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_weight="1">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Time"
                       android:textStyle="bold"
                       android:textColor="@color/black"
                       android:textSize="17sp"
                       android:layout_gravity="center"/>

                   <TextView
                       android:id="@+id/tvTime"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="12PM-1PM"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:layout_gravity="center"/>

               </LinearLayout>




           </LinearLayout>
           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="#FAF8F8"
               android:elevation="4dp"
               android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rs 1200"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_gravity="center"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="You"
                        android:textStyle="bold"
                        android:textColor="#1A36DF"
                        android:textSize="17sp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tvUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="sagarmsra"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_gravity="center"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Available"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/ivAvailable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/bg_unavailable"
                        />

                </LinearLayout>


            </LinearLayout>

       </LinearLayout>



   </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_booking_form"
                android:padding="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fill the form"
                    android:textColor="#1A36DF"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile Number"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:boxStrokeColor="#1A36DF"
                    android:textColorHint="#534646"
                    android:layout_marginBottom="7dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextColor="#1A36DF">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:maxLength="10"
                        android:inputType="number"/>



                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Teammate or opponent's Mobile Number"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:boxStrokeColor="#1A36DF"
                    android:textColorHint="#534646"
                    android:layout_marginBottom="7dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextColor="#1A36DF">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTeam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="25dp"
                        android:maxLength="10"
                        android:inputType="number"/>



                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/cbCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="We agree every right conditions of futsal."/>

                <Button
                    android:id="@+id/btnBook"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:text="Book"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"/>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</LinearLayout>