<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_bg"
    android:orientation="vertical"
    android:elevation="10dp"
    android:padding="7dp"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:gravity="center"
        android:text="Type 'CONFIRM' to book futsal"
        android:textColor="#0288D1"
        android:textSize="21sp"
        android:textStyle="bold"
      />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="CONFIRM"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />




    <Button
        android:id="@+id/btnConfirm"
        android:backgroundTint="#5DC305"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="Confirm"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:enabled="false"
        />




</LinearLayout>